fix:changed name to David

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="right-column">
         <div class="top-white"></div>
         <div class="name-div">
-          <span class="first-name">KAREN </span
+          <span class="first-name">DAVID </span
           ><span class="second-name">RICHARDS</span> <br /><span
             class="name-title"
             >PROFESSIONAL TITLE</span
