fix: changed name to Josin Chacko

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
       <div class="right-column">
         <div class="top-white"></div>
         <div class="name-div">
-          <span class="first-name">DAVID </span
-          ><span class="second-name">RICHARDS</span> <br /><span
+          <span class="first-name">JOSIN </span
+          ><span class="second-name">CHACKO</span> <br /><span
             class="name-title"
             >PROFESSIONAL TITLE</span
           >
